导航栏颜色

--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -102,9 +102,9 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF">
+		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
 			<a href="javascript:mine.isMineShow=true;" class="mui-icon  mui-pull-left"><img style="width: 26px;height: 26px;border-radius: 50%;" src="../img/login/headImg.png" /></a>
-			<h1 class="mui-title common-color-white common-font-family-Bold">首页</h1>
+			<h1 class="mui-title common-color-white common-font-family-Bold"  style="color: white;">首页</h1>
 		</header>
 		<div class="mui-scroll-wrapper" style="margin-top: 45px;">
 			<div class="mui-scroll">
