--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -49,7 +49,7 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
+		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">新建通知</h1>
 			<a class="mui-icon mui-pull-right right-cancel">取消</a>
