--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -163,6 +163,9 @@
 			mui('.mui-scroll-wrapper').scroll({
 				indicators: true, //是否显示滚动条
 			});
+			mui.init({
+				statusBarBackground: '#63BBFF'
+			});
 			var titles = ["", "", ""]
 			//加黑条
 			addStrip(getImgArray())
