--- a/wisdomCampus/html/selectPeople.html
+++ b/wisdomCampus/html/selectPeople.html
@@ -13,6 +13,9 @@
 			.tableView {
 				padding-bottom: 65px;
 			}
+			.mui-bar-nav {
+				background-color: #63BBFF;
+			}
 			
 			.weui-btn_blue {
 				background-color: #3C9BFE;
@@ -32,8 +35,8 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">通知详情</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
+			<h1 class="mui-title" style="color: white;">选择接收人</h1>
 		</header>
 		<div class="mui-content" id="selectPeopleData" v-show="flag>0" style="background-color: white;">
 			<ul class="mui-table-view tableView">
