--- a/wisdomCampus/html/new-check.html
+++ b/wisdomCampus/html/new-check.html
@@ -24,10 +24,10 @@
 				color: white;
 			}
 			
-			.mui-bar .mui-icon {
+			/*.mui-bar .mui-icon {
 				font-size: 15px;
 				padding-top: 15px;
-			}
+			}*/
 			
 			.weui-cell__hd {
 				padding-right: 15px;
