--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -24,10 +24,10 @@
 				color: white;
 			}
 			
-			.mui-bar .mui-icon {
+			/*.mui-bar .mui-icon {
 				font-size: 15px;
 				padding-top: 15px;
-			}
+			}*/
 			
 			.weui-cell__hd {
 				padding-right: 15px;
@@ -52,7 +52,7 @@
 		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">新建通知</h1>
-			<a class="mui-icon mui-pull-right right-cancel">取消</a>
+			<!--<a class="mui-icon mui-pull-right right-cancel">取消</a>-->
 		</header>
 		<div id="message" class="mui-content">
 			<div class="weui-cells">
