--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -101,7 +101,7 @@
 		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">通知公告</h1>
-			<a onclick="add()" class="mui-icon mui-icon-plusempty mui-pull-right" style="color: white;"></a>
+			<a onclick="add()" class="mui-icon  mui-pull-right" style="color: white;font-size: 25px;">+</a>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
 
