--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -100,7 +100,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
-			<h1 class="mui-title" style="color: white;">通知公告</h1>
+			<h1 id="ntitle" class="mui-title" style="color: white;">通知公告</h1>
 			<a onclick="add()" class="mui-icon  mui-pull-right" style="color: white;font-size: 25px;">+</a>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
@@ -229,6 +229,7 @@
 			var title_id = utils.getSessionStorageByUrlsKey();
 			console.log(title_id);
 			if(title_id == 2) {
+				document.getElementById("ntitle").innerHTML = "事务审批"
 				document.getElementById("notice").className = "mui-control-item"
 				document.getElementById("apply").className = "mui-control-item mui-active"
 				document.getElementById("item1mobile").className = "mui-slider-item mui-control-content"
@@ -533,6 +534,13 @@
 				var temp = current_key.send_recevice == "send" ? "recevice" : "send"
 				var ul1 = document.getElementById(current_key.title + "_" + temp);
 				ul1.className = "mui-table-view mui-hidden";
+				if(current_key.title == 'notice') {
+					document.getElementById("ntitle").innerHTML = "通知公告"
+
+				} else {
+					document.getElementById("ntitle").innerHTML = "事务审批"
+
+				}
 			})
 			mui(".mui-table-view").on('tap', 'li', function() {
 
