--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -109,7 +109,7 @@
 					</div>
 				</div>
 			</div>
-			<a @click="clickSubmitBtn()" href="#" class="weui-btn weui-btn_blue">发布</a>
+			<a @click="clickSubmitBtn()" class="weui-btn weui-btn_blue">发布</a>
 			<div class="weui-gallery" :style="displayGallery" style="z-index: 999999;position:absolute;">
 				<span class="weui-gallery__img" @click="clickGigImg" :style="{backgroundImage:'url('+selectImgPath+')'}"></span>
 				<div class="weui-gallery__opr">
@@ -141,9 +141,6 @@
 		<script src='../js/utils/signHmacSHA1.js'></script>
 
 		<script type="text/javascript">
-			var uptokenData;
-			var qnFileUploader; //七牛上传控件对象
-			initQNUploader();
 			var message = new Vue({
 				el: '#message',
 				data: {
@@ -211,6 +208,9 @@
 					}
 				}
 			})
+						var uptokenData;
+			var qnFileUploader; //七牛上传控件对象
+			initQNUploader();
 
 			//从相册中选择照片后，上传
 			//index--从相册选择照片回调里面，照片的索引，files--选择的照片信息，filesSum--选择照片之前，现存的照片张数
