--- a/wisdomCampus/html/selectPeople.html
+++ b/wisdomCampus/html/selectPeople.html
@@ -433,6 +433,8 @@
 						}
 					}
 				}
+				//再获取上级部门的下级全部部门
+				setSubordinateDepart(array, selectPeopleData.departmentArray);
 			}
 
 			//8.年级下班级
